<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/texto_botao_login"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".login.view.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="75dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/texto_login" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="143dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/texto_login" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/botao_checkbox"
        android:checked="true"
        android:clickable="true"
        android:text="@string/remember_me"
        android:textColor="@color/texto_remember"
        android:textSize="@dimen/text_remember"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="204dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/botao_log_in"
        android:text="@string/log_in"
        android:textColor="@color/texto_botao_login"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="277dp" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/linha_view">

        </View>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/or" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/linha_view">

        </View>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogFacebook"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/botao_facebook"
        android:drawableLeft="@drawable/ic_facebook_logo"
        android:text="@string/login_with_facebook"
        android:textColor="@color/texto_botao_login"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="401dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:backgroundTint="@color/botao_register"
        android:text="@string/register"
        android:textColor="@color/texto_botao_login"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="462dp" />

</LinearLayout>