<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewDetalheRestaurante"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:background="@color/texto_botao_login"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <ImageView
        android:id="@+id/imageViewRestaurante"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:scaleType="centerCrop"
        card_view:srcCompat="@drawable/ic_chinainbox_restaurante" />

    <TextView
        android:id="@+id/textViewNomeRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="210dp"
        android:text="@string/nome_do_restaurante"
        android:textColor="@color/nome_restaurante"
        android:textSize="@dimen/nome_restaurante_home"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewEnderecoRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="240dp"
        android:text="@string/endereco_restaurante"
        android:textColor="@color/endereco_restaurante"
        android:textSize="@dimen/endereco_restaurante_home"/>

    <TextView
        android:id="@+id/textViewHorarioRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="260dp"
        android:text="@string/horario_do_restaurante"
        android:textColor="@color/endereco_restaurante"
        android:textSize="@dimen/endereco_restaurante_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnderecoRestaurante" />

</android.support.v7.widget.CardView>